# Read-N-RAG

./: .gitignore  README.md
ai/: pyproject.toml
ai/ai/: corpus.py  main.py  ui.py
ai/ai/data/.streamlit/: config.toml
