[tool.poetry]
name = "ai"
version = "0.1.0"
description = ""
authors = ["sakshamshahu <sakshamshahu.work@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
ollama = "^0.1.8"
numpy = "^1.26.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
dev = "ai.main:main"
